--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ div.caixa-cadastro {
     font-family: 'Rubik Mono One', sans-serif;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.452);
 
-    background-color: rgba(127, 255, 212, 0.534);
+    background-color: rgba(31, 3, 156, 0.534);
     border-radius: 10px;
     padding: 15px;
     box-shadow: 2px 2px 10px black;
@@ -84,6 +84,7 @@ div.caixa-cadastro {
     font-weight: bolder;
     box-shadow: 2px 2px 10px black;
     transition: 0.5s all ease;
+    background-color: rgb(182, 181, 181);
 }
 
 #btn-enviar:hover {
