--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+@font-face {
+    font-family: 'titulo';
+    src: url("../fonts/Heavitas.ttf");
+}
 
 * {
     margin: 0;
@@ -9,224 +12,8 @@
 }
 
 body {
-    /* background-color: black;
-    background-image: url('../img/fundo.jpeg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed; */
+    background-color: black;
 }
-
-@keyframes move {
-    100% {
-        transform: translate3d(0, 0, 1px) rotate(360deg);
-    }
-}
-
-.background {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background: #3E1E68;
-    overflow: hidden;
-}
-
-.background span {
-    width: 20vmin;
-    height: 20vmin;
-    border-radius: 20vmin;
-    backface-visibility: hidden;
-    position: absolute;
-    animation: move;
-    animation-duration: 45;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-
-.background span:nth-child(0) {
-    color: #FFACAC;
-    top: 33%;
-    left: 48%;
-    animation-duration: 26s;
-    animation-delay: -25s;
-    transform-origin: -4vw -22vh;
-    box-shadow: -40vmin 0 5.151302248590691vmin currentColor;
-}
-.background span:nth-child(1) {
-    color: #FFACAC;
-    top: 79%;
-    left: 66%;
-    animation-duration: 17s;
-    animation-delay: -26s;
-    transform-origin: -21vw 10vh;
-    box-shadow: 40vmin 0 5.470253082254352vmin currentColor;
-}
-.background span:nth-child(2) {
-    color: #E45A84;
-    top: 50%;
-    left: 37%;
-    animation-duration: 54s;
-    animation-delay: -36s;
-    transform-origin: 22vw 15vh;
-    box-shadow: 40vmin 0 5.804894324276569vmin currentColor;
-}
-.background span:nth-child(3) {
-    color: #583C87;
-    top: 68%;
-    left: 93%;
-    animation-duration: 35s;
-    animation-delay: -14s;
-    transform-origin: 12vw -12vh;
-    box-shadow: -40vmin 0 5.030908883555672vmin currentColor;
-}
-.background span:nth-child(4) {
-    color: #FFACAC;
-    top: 73%;
-    left: 66%;
-    animation-duration: 25s;
-    animation-delay: -5s;
-    transform-origin: 25vw 8vh;
-    box-shadow: 40vmin 0 5.392208364025988vmin currentColor;
-}
-.background span:nth-child(5) {
-    color: #E45A84;
-    top: 71%;
-    left: 90%;
-    animation-duration: 13s;
-    animation-delay: -25s;
-    transform-origin: 17vw -15vh;
-    box-shadow: 40vmin 0 5.97621341585717vmin currentColor;
-}
-.background span:nth-child(6) {
-    color: #583C87;
-    top: 20%;
-    left: 58%;
-    animation-duration: 19s;
-    animation-delay: -22s;
-    transform-origin: 5vw 18vh;
-    box-shadow: -40vmin 0 5.3587498786047245vmin currentColor;
-}
-.background span:nth-child(7) {
-    color: #E45A84;
-    top: 66%;
-    left: 6%;
-    animation-duration: 43s;
-    animation-delay: -20s;
-    transform-origin: -24vw 0vh;
-    box-shadow: 40vmin 0 5.783636178705646vmin currentColor;
-}
-.background span:nth-child(8) {
-    color: #583C87;
-    top: 14%;
-    left: 86%;
-    animation-duration: 48s;
-    animation-delay: -12s;
-    transform-origin: -19vw -24vh;
-    box-shadow: 40vmin 0 5.669259035310647vmin currentColor;
-}
-.background span:nth-child(9) {
-    color: #E45A84;
-    top: 73%;
-    left: 61%;
-    animation-duration: 19s;
-    animation-delay: -42s;
-    transform-origin: -13vw -6vh;
-    box-shadow: 40vmin 0 5.661730861871161vmin currentColor;
-}
-.background span:nth-child(10) {
-    color: #583C87;
-    top: 30%;
-    left: 30%;
-    animation-duration: 52s;
-    animation-delay: -1s;
-    transform-origin: 14vw 9vh;
-    box-shadow: 40vmin 0 5.55799089453142vmin currentColor;
-}
-.background span:nth-child(11) {
-    color: #FFACAC;
-    top: 95%;
-    left: 4%;
-    animation-duration: 36s;
-    animation-delay: -13s;
-    transform-origin: 4vw 5vh;
-    box-shadow: 40vmin 0 5.282965810530237vmin currentColor;
-}
-.background span:nth-child(12) {
-    color: #E45A84;
-    top: 48%;
-    left: 60%;
-    animation-duration: 54s;
-    animation-delay: -12s;
-    transform-origin: 5vw -17vh;
-    box-shadow: 40vmin 0 5.0187446725537255vmin currentColor;
-}
-.background span:nth-child(13) {
-    color: #E45A84;
-    top: 20%;
-    left: 88%;
-    animation-duration: 40s;
-    animation-delay: -13s;
-    transform-origin: -2vw -14vh;
-    box-shadow: 40vmin 0 5.526336284105997vmin currentColor;
-}
-.background span:nth-child(14) {
-    color: #FFACAC;
-    top: 80%;
-    left: 45%;
-    animation-duration: 10s;
-    animation-delay: -10s;
-    transform-origin: 23vw 20vh;
-    box-shadow: 40vmin 0 5.7237810691835405vmin currentColor;
-}
-.background span:nth-child(15) {
-    color: #583C87;
-    top: 60%;
-    left: 2%;
-    animation-duration: 21s;
-    animation-delay: -17s;
-    transform-origin: 24vw 25vh;
-    box-shadow: -40vmin 0 5.953677171273922vmin currentColor;
-}
-.background span:nth-child(16) {
-    color: #FFACAC;
-    top: 81%;
-    left: 37%;
-    animation-duration: 12s;
-    animation-delay: -10s;
-    transform-origin: -1vw 17vh;
-    box-shadow: 40vmin 0 5.651042464960279vmin currentColor;
-}
-.background span:nth-child(17) {
-    color: #583C87;
-    top: 21%;
-    left: 57%;
-    animation-duration: 25s;
-    animation-delay: -27s;
-    transform-origin: 11vw -23vh;
-    box-shadow: -40vmin 0 5.9333812385048965vmin currentColor;
-}
-.background span:nth-child(18) {
-    color: #E45A84;
-    top: 86%;
-    left: 37%;
-    animation-duration: 32s;
-    animation-delay: -11s;
-    transform-origin: 1vw 2vh;
-    box-shadow: -40vmin 0 5.3796277513019275vmin currentColor;
-}
-.background span:nth-child(19) {
-    color: #FFACAC;
-    top: 66%;
-    left: 85%;
-    animation-duration: 7s;
-    animation-delay: -25s;
-    transform-origin: -13vw -10vh;
-    box-shadow: 40vmin 0 5.974988883229589vmin currentColor;
-}
-
 
 div.caixa-cadastro {
     border: 1px solid rgba(211, 211, 211, 0.288);
@@ -243,7 +30,7 @@ div.caixa-cadastro {
 #titulo-principal {
     text-align: center;
     margin: 20px;
-    font-family: 'Rubik Mono One', sans-serif;
+    font-family: 'titulo', sans-serif;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.452);
 
     background-color: rgba(31, 3, 156, 0.534);
@@ -302,7 +89,7 @@ div.caixa-cadastro {
     font-weight: bolder;
     box-shadow: 2px 2px 10px black;
     transition: 0.5s all ease;
-    background-color: rgb(182, 181, 181);
+    background-color: rgba(182, 181, 181, 0.767);
 }
 
 #btn-enviar:hover {
