--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 div.caixa-cadastro {
     border: 1px solid rgba(211, 211, 211, 0.288);
     width: 360px;
-    height: 540px;
+    height: 550px;
     margin: 50px auto;
     background: transparent;
     backdrop-filter: blur(15px);
@@ -35,7 +35,7 @@ div.caixa-cadastro {
 
     background-color: rgba(31, 3, 156, 0.534);
     border-radius: 10px;
-    padding: 15px;
+    padding: 20px;
     box-shadow: 2px 2px 10px black;
 }
 
@@ -128,16 +128,16 @@ div.caixa-cadastro {
 #link-esqueceu-senha {
     margin-top: 25px;
     text-decoration: none;
-    font-weight: bolder;
-    font-size: 17px;
+    font-size: 18px;
     transition: 0.5s all ease;
-    color: orange;
-    text-shadow: 1px 1px 1px orange;
+    color: black;
+    font-weight: bold;
 }
 
 #link-esqueceu-senha:hover {
+    cursor: pointer;
     text-decoration: underline;
-    font-size: 18px;
+    font-size: 19px;
 }
 
 #ou {
