--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,14 @@ div.caixa-cadastro {
 }
 
 .padrao:focus {
+    background: transparent;
+    backdrop-filter: blur(8px);
+    border: none;
+}
+
+.padrao:active {
+    background: transparent;
+    backdrop-filter: blur(8px);
     border: none;
 }
 
