--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,6 @@
     src: url("../fonts/Heavitas.ttf");
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100.. 900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -32,13 +30,14 @@ div.caixa-cadastro {
 #titulo-principal {
     text-align: center;
     margin: 20px;
-    font-family: "Inter", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
     font-weight: 900;
     text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.452);
 
     background-color: rgba(31, 3, 156, 0.534);
     border-radius: 10px;
-    padding: 20px;
+    padding: 15px;
     box-shadow: 2px 2px 10px black;
 }
 
